# propositional-logic

./: LICENSE  Main.hs  proposition-cnf.cabal  propositional-logic.cabal
src/Data/Logic/: Propositional.hs
src/Data/Logic/Propositional/: Parser.hs
tests/: Parser.hs  Propositional.hs  Test.hs  Utils.hs
