name:                proposition-cnf
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Slava Shklyaev
maintainer:          shk.slava@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Main
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite Test
  hs-source-dirs:      tests
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  ghc-options:         -Wall
