name:                proposition-cnf
version:             0.1.0.0
synopsis:            Transform a propositional logic formula into an equivalent formula in CNF.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Slava Shklyaev
maintainer:          shk.slava@gmail.com
category:            Logic
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Logic.Propositional
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.8

test-suite Test
  hs-source-dirs:      tests
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , proposition-cnf
                     , tasty >= 0.10
                     , tasty-quickcheck >= 0.8
                     , tasty-hunit >= 0.9
