name:                propositional-logic
version:             0.1.0.0
license:             PublicDomain
license-file:        LICENSE
author:              Slava Shklyaev
maintainer:          shk.slava@gmail.com
category:            Logic
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  exposed-modules:     Data.Logic.Propositional
                     , Data.Logic.Propositional.Parser
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , parsec >=3.1 && <3.2
                     , transformers >=0.3 && <0.4

test-suite Propositional
  hs-source-dirs:      tests
  main-is:             Propositional.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       propositional-logic
                     , base >=4.7 && <4.8
                     , tasty >= 0.10
                     , tasty-quickcheck >= 0.8
                     , tasty-hunit >= 0.9

test-suite Parser
  hs-source-dirs:      tests
  main-is:             Parser.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       propositional-logic
                     , base >=4.7 && <4.8
                     , tasty >= 0.10
                     , tasty-quickcheck >= 0.8
                     , tasty-hunit >= 0.9
